# AZhao-C-Practice

./: .gitignore  Readme.md
01_table_driven_example/: global.h  main.c  switch_case.c  table_driven.c  types.h
02_makefile_mock_func/: .gitignore
02_makefile_mock_func/project/musicbox/driver/button/: button.h
02_makefile_mock_func/project/musicbox/driver/oled/: oled.c
02_makefile_mock_func/project/musicbox/service/audio_core/: audio_core.c  audio_core.h
02_makefile_mock_func/project/musicbox/service/bluetooth/: bluetooth.c  bluetooth.h
02_makefile_mock_func/project/user/: user.c
02_makefile_mock_func/project/user/music/: music.h
02_makefile_mock_func/project/user/network/: network.h
02_makefile_mock_func/project/user/settings/: settings.c  settings.h
02_makefile_mock_func/tools/dev_tool/musicbox/driver/: oled_debug.c  oled_debug.h
02_makefile_mock_func/tools/dev_tool/musicbox/service/: wifi_debug.c
03_mini_nvme/Design/: miniNVMe设计.pptx
03_mini_nvme/miniNVMe/test/host/DT/script/: build.sh  clean.sh
03_mini_nvme/miniNVMe/test/host/DT/testcase/: testcase_1.cc
03_mini_nvme/miniNVMe/thirdpart/gtest/googletest/src/: gtest.cc
04_c_generics/: Readme.md
05_cross_compile_sg3_utils/: Readme.md
practice_2/: .gitignore  Readme.md
practice_2/project/musicbox/driver/button/: button.c
practice_2/project/musicbox/driver/oled/: oled.h
practice_2/project/musicbox/service/audio_core/: audio_core.c  audio_core.h
practice_2/project/musicbox/service/menu/: menu.c  menu.h
practice_2/project/musicbox/service/wifi/: wifi.c  wifi.h
practice_2/project/user/: Makefile  user.c
practice_2/project/user/music/: music.c  music.h
practice_2/project/user/network/: network.c
practice_2/project/user/settings/: settings.c
practice_2/tools/dev_tool/musicbox/service/: audio_core_debug.c
practice_2/tools/dev_tool/tool/: Makefile  dev_tool.c
practice_3/: Readme.md
practice_3/miniNVMe/test/host/DT/: CMakeLists.txt
practice_3/miniNVMe/test/host/DT/script/: build.sh  clean.sh
practice_6/: Readme.md
